handle quiz
